--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "mocha tests"
   },
   "dependencies": {
+    "cloudinary": "^1.27.1",
     "connect-flash": "^0.1.1",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
@@ -26,6 +28,8 @@
     "joi": "^18.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
